# codex

codex-rs/core/src/: mcp_connection_manager.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-client/src/: main.rs  mcp_client.rs
codex-rs/mcp-client/tests/: http_client.rs
