[package]
name = "codex-mcp-client"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mcp-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "0.7", default-features = false, features = [
    "base64",
    "client",
    "macros",
    "reqwest",
    "schemars",
    "server",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
anyhow = { workspace = true }
axum = "0.7"
rmcp = { version = "0.7", default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-sse-server",
] }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
